tests/baselines/reference/invalidUnicodeEscapeSequance4.errors.txt
tests/cases/compiler/invalidUnicodeEscapeSequance4.ts(2,5): error TS1134: Variable declaration expected.
tests/cases/compiler/invalidUnicodeEscapeSequance4.ts(2,11): error TS1127: Invalid character.


==== tests/cases/compiler/invalidUnicodeEscapeSequance4.ts (2 errors) ====
    var a\u0031; // a1 is a valid identifier
    var \u0031a; // 1a is an invalid identifier
        ~
!!! error TS1134: Variable declaration expected.
              
!!! error TS1127: Invalid character.